--- a/styles/style.css
+++ b/styles/style.css
@@ -18,21 +18,6 @@
   .pagination a:hover:not(.active) {background-color: #ddd;}
 
 
-  
-/* .fill {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
-}
-.fill Image {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%
-} */
-
-
-
 
  
 /* Hide over content description (Allnews + NewsPagination) */   
@@ -44,7 +29,7 @@
   -webkit-box-orient: vertical;
 }
 
-.description-home-mobile{
+.description-content{
   overflow: hidden;
   width:100%;                      
   display: -webkit-box;
@@ -52,15 +37,16 @@
   -webkit-box-orient: vertical;
 }
 
-.description-home{
+.description-title{
   overflow: hidden;
   width:100%;                      
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
 
+/* Font */
 .font-arial {
   font-family: Arial, Helvetica, sans-serif;
 }
