--- a/styles/style.css
+++ b/styles/style.css
@@ -51,5 +51,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.inset-border {
+  border: gray;
+  border-radius: 10px;
+  border-style: inset;
+}
+
 
 
